# dbx

./: .gitignore  README.md  README.zh-CN.md  codecov.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  docs.yml  mcp-release.yml  notify.yml  release.yml
agents/: README.md  README.zh-CN.md
agents/drivers/kingbase-go/: kingbase_metadata.go  main_test.go
apps/desktop/src/: App.vue
apps/desktop/src/composables/: useAppUpdater.ts  useDataGridEditor.ts  useNavigationTargets.ts  useSqlExecution.ts
apps/desktop/src/lib/: canvasDataGridRenderer.ts  editorThemes.ts  navicatImport.ts  openTabsPersistence.ts  prestoSqlBuiltinDriver.ts  queryResultArchive.ts  queryResultArchiveFile.ts  sqlCompletion.ts  sqlHighlighter.ts  tabPresentation.ts  tabResultCache.ts  tableStructureEditorState.ts  tauri.ts
apps/desktop/src/stores/: connectionStore.ts  productionSafetyStore.ts  queryStore.ts  settingsStore.ts
apps/desktop/src/types/: database.ts
crates/dbx-core/src/: agent_connection.rs  agent_loop.rs  agent_manager.rs  agent_service.rs  agent_tools.rs  ai.rs  cloud_sync.rs  connection.rs  connection_secrets.rs  data_grid_sql.rs  driver_runtime.rs  lib.rs  object_source_sql.rs  production_safety.rs  query.rs  query_execution_sql.rs  query_result_export.rs  schema.rs  schema_diff.rs  schema_snapshot.rs  sql_risk.rs  storage.rs  table_structure_sql.rs  transfer.rs  types.rs
crates/dbx-core/src/db/: clickhouse_driver.rs  elasticsearch_driver.rs  influxdb_driver.rs  mongo_driver.rs  mysql.rs  ob_oracle.rs  postgres.rs  questdb.rs  redis_driver.rs  rqlite_driver.rs  sqlite.rs  sqlserver.rs  turso_driver.rs
crates/dbx-core/src/models/: connection.rs
crates/dbx-core/src/mq/: config.rs  service.rs
crates/dbx-core/src/nacos/: config.rs  service.rs
crates/dbx-core/tests/: agent_service.rs  live_postgres_query_result_export.rs  live_postgres_transfer.rs  live_sqlserver_completion.rs  schema_snapshot.rs
deploy/: Dockerfile
deploy/homebrew/: dbx-cli.rb
docs/app/[lang]/: page.tsx
docs/content/docs/: ai-assistant.cn.mdx  ai-assistant.mdx  cli.cn.mdx  cli.mdx
docs/superpowers/plans/: 2026-06-14-query-result-archive.md
scripts/: dev-backend.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/commands/: agents.rs  ai.rs  connection.rs  external_sql.rs  update.rs
src-web/: Cargo.toml
src/components/mongo/: MongoDocBrowser.vue
tests/fixtures/: production-safety-corpus.json
(+83 files in other folders)
